FIX: z-index

--- a/src/Components/App/styles.css
+++ b/src/Components/App/styles.css
@@ -25,6 +25,10 @@
   width: 100%;
 }
 
+.Menu {
+    z-index: 300;
+}
+
 @media (min-width: 900px) {
   .App--MenuOpen .App__ConversationList,
   .App--MenuClosed .App__ConversationList {
